# openmp

libomptarget/plugins/fpga/: CMakeLists.txt
libomptarget/plugins/fpga/src/: rtl.cpp
